# trivia

rust/: Cargo.toml
rust/src/: game.rs  generate_golden_master.rs  main.rs  trivia.rs
rust/tests/: golden_master.rs  main.rs
