[package]
name = "trivia"
version = "0.1.0"
authors = ["Cengizhan Paşaoğlu <cengizhanpasaoglu@gmail.com>"]

[dependencies]
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[lib]
name = "trivia"
path = "src/trivia.rs"

[[bin]]
name = "trivia"
path = "src/main.rs"

[[bin]]
name = "generate-golden-master"
path = "src/generate_golden_master.rs"
